# temporal-cpp-sdk

./: .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py
.github/workflows/: ci.yml  docs.yml
cmake/: TemporalProto.cmake  temporal-cpp-config.cmake.in  temporal-cpp-sdk-config.cmake.in
docs/: ARCHITECTURE.md  ROADMAP.md  sidebars.js
docs/docs/: advanced.md  architecture.md  cancellation.md  concepts.md  nexus.md  observability.md  schedules.md  signals.md  timeouts-and-retries.md  versioning.md
docs/docs/workflows/: messaging.md
docs/i18n/ru/docusaurus-plugin-content-docs/current/: advanced.md  nexus.md  signals.md
docs/i18n/ru/docusaurus-plugin-content-docs/current/workflows/: messaging.md
examples/hello_world/: CMakeLists.txt  main.cpp
include/temporal/: temporal.h  typed_handles.h
include/temporal/activity/: activity.h
include/temporal/client/: client.h
include/temporal/common/: errors.h  options.h  payload.h  search_attribute.h  session.h
include/temporal/converter/: data_converter.h  failure_converter.h
include/temporal/interceptor/: tracing.h
include/temporal/internal/: callable_traits.h  workflow_outbound.h
include/temporal/log/: logger.h
include/temporal/testing/: test_workflow_environment.h
include/temporal/worker/: worker.h
include/temporal/workflow/: channel.h  context.h  future.h  selector.h
src/: CMakeLists.txt
src/client/: client.cpp
src/common/: search_attribute.cpp
src/converter/: data_converter.cpp  failure_converter.cpp
src/internal/: activity_task_handler.cpp  activity_task_handler.h  coroutine.cpp  coroutine.h  determinism.h  grpc_client.cpp  grpc_client.h  lru_cache.h  nexus_task_handler.cpp  nexus_task_handler.h  proto_util.cpp  proto_util.h  worker_impl.cpp  worker_impl.h  workflow_task_handler.cpp  workflow_task_handler.h
src/log/: logger.cpp
src/worker/: worker.cpp
tests/: CMakeLists.txt  activity_context_test.cpp  codec_test.cpp  converter_extras_test.cpp  converter_test.cpp  coroutine_test.cpp  determinism_test.cpp  file_payload_storage_test.cpp  heartbeat_throttle_test.cpp  lru_cache_test.cpp  poller_scaler_test.cpp  tls_channel_test.cpp  workflow_runtime_test.cpp
tests/integration/: activity_edge_test.cpp  child_can_determinism_edge_test.cpp  failure_decode_edge_test.cpp  integration_fixture.h  integration_test.cpp  nexus_operation_edge_test.cpp  schedule_batch_visibility_edge_test.cpp  update_query_signal_edge_test.cpp  workflow_lifecycle_edge_test.cpp
tests/packaging/: CMakeLists.txt  main.cpp
website/: .gitignore  README.md  docusaurus.config.js  package.json  sidebars.js
website/docs/: advanced.md  architecture.md  client-and-worker.md  concepts.md  data-conversion.md  error-handling.md  getting-started.md  installation.md  intro.md  parity.md  patterns.md  production.md  testing.md  tutorial.md
website/docs/workflows/: composition.md  messaging.md  overview.md
website/i18n/ru/: code.json
website/i18n/ru/docusaurus-plugin-content-docs/: current.json
website/i18n/ru/docusaurus-plugin-content-docs/current/: advanced.md  architecture.md  client-and-worker.md  concepts.md  data-conversion.md  error-handling.md  getting-started.md  installation.md  intro.md  parity.md  patterns.md  production.md  testing.md  tutorial.md
website/i18n/ru/docusaurus-plugin-content-docs/current/workflows/: composition.md  messaging.md  overview.md
website/i18n/ru/docusaurus-theme-classic/: footer.json  navbar.json
website/src/css/: custom.css
